force-app/main/default/objects/Case_Session__c/Case_Session__c.object-meta.xml
<CustomObject>
    <description>Similar to user sessions in PayPal, teammates has an associated session when they handle interactions. A session is established for an Actor (teammate) and a subject (Account Number) and hence a single case can have multiple sessions (like switch accounts). Lot of interactions happen in a session between the actor and subject - like Basic Authentication, Step-up and so on and this object preserves critical session data that is required during the interaction and sometimes beyond for reporting purposes.</description>
    <label>Case Session</label>
    <nameField>
        <label>Case Session Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Sessions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>