force-app/main/default/objects/Case_Session__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account Number being serviced in the interaction</description>
    <inlineHelpText>Account Number being serviced in the interaction</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Case Sessions</relationshipLabel>
    <relationshipName>Case_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>