force-app/main/default/objects/Case_Session__c/fields/Basic_Authentication_Status__c.field-meta.xml
<CustomField>
    <fullName>Basic_Authentication_Status__c</fullName>
    <description>When a customer interacts with customer service, the first thing we should do is to verify whether the person is indeed the account owner. This is achieved by asking few account related information which only the account owner knows. This is called Basic Authentication. This field stores the status of the basic validation for a case session. We may incorporate more detailed statuses depending on business needs.</description>
    <inlineHelpText>The status of the basic customer validation.</inlineHelpText>
    <label>Basic Authentication Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SUCCESS</fullName>
            </value>
            <value>
                <fullName>FAILED</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>