force-app/main/default/objects/Case_Session__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Current Interaction Case</description>
    <inlineHelpText>Current Interaction Case</inlineHelpText>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Case Sessions</relationshipLabel>
    <relationshipName>Case_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>