force-app/main/default/objects/Case_Session__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Party id that is currently contacting us. For personal accounts, this will be same as the primary owner associated with the contact. For business accounts, this could be either the primary owner or the secondary user.</description>
    <inlineHelpText>Party id that is currently contacting us. For personal accounts, this will be same as the primary owner associated with the contact. For business accounts, this could be either the primary owner or the secondary user.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Case Sessions</relationshipLabel>
    <relationshipName>Case_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>