force-app/main/default/objects/Case_Session__c/fields/Correlating_GSID__c.field-meta.xml
<CustomField>
    <fullName>Correlating_GSID__c</fullName>
    <description>Correlating Session Id - Global session id for the Customer&apos;s session or the other channels like IVR. This GSID will be passed to Teammate Tool from other Channels while handing over the contact.</description>
    <inlineHelpText>Correlating Session Id - Global session id for the Customer&apos;s session or the other channels like IVR. This GSID will be passed to Teammate Tool from other Channels while handing over the contact.</inlineHelpText>
    <label>Correlating GSID</label>
    <length>256</length>
    <type>LongTextArea</type>
</CustomField>