force-app/main/default/objects/Case_Session__c/fields/Security_Context__c.field-meta.xml
<CustomField>
    <fullName>Security_Context__c</fullName>
    <description>Security context generated for the session - between the teammate (actor) and the account (subject) for the current case.</description>
    <inlineHelpText>Security context generated for the session</inlineHelpText>
    <label>Security Context</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>