force-app/main/default/objects/Case_Session__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Teammate who is working or already worked in the case</description>
    <inlineHelpText>Teammate acted on this case</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Case_Sessions</relationshipName>
    <type>Lookup</type>
</CustomField>